--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -14,6 +14,8 @@
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+
         <!-- Core theme JS-->
         <script th:src="@{/js/scripts.js}"></script>
     </head>
